duplicando foto maior do gatinho

--- a/galeria.html
+++ b/galeria.html
@@ -12,9 +12,15 @@
     width="500"
     />
 
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Red_Kitten_01.jpg/1599px-Red_Kitten_01.jpg"
+    width="600"
+    />
+
     <img src="./images.jpeg" width="500" />
 
     <img src="./image2.jpg" width="500" />
+
+
 
     <a href="index.html">
         Voltar
