adicionar passo a passo git com comandos

--- a/index.html
+++ b/index.html
@@ -26,7 +26,16 @@
     </h3>
 
     <p>
-        <a href="#paragrafoFinal">Ir para o final</a>
+        <a href="#paragrafoFinal">Ir para o final rápido</a>
+    </p>
+
+    <p>
+        Comandos Git
+        <pre>git clone {link do repositório}</pre> clonar o repositório remoto (pasta) <br /> 
+        <b>abra com o vscode a nova pasta e cole os arquivo na nova pasta</b> <br />
+        <pre>git add . </pre> adiciona os seus arquivos para serem versionar <br />
+        <pre>git commit -m "sua mensagem de commit"</pre> adiciona uma mensagem para as mudanças efetuadas <br />
+        <pre>git push</pre> envia as mudanças para o repositório remoto <br />
     </p>
 
     <!-- 
@@ -85,7 +94,6 @@
         Ipsum has been the industry's standard 
         dummy text e typesetting, <br/> remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
     </p>
-
 
     <p id="paragrafoFinal">
         Parágrafo final um 
