aula 4: mais sobre formulario, introdução css e introdução html semantico.

--- a/index.html
+++ b/index.html
@@ -3,10 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aula 4</title>
+    <title>Document</title>
 </head>
 <body>
     
-    <h1>Será segunda =D</h1>
+    <!-- 
+        HTML Semântico
+        Motivações / Pontos positivos
+        Código mais legível
+        Acessibilidade (Leitores de tela)
+        Melhor para motores de busca - SEO - (Google, Yahoo, Bing...)
+    -->
 </body>
 </html>
