--- a/aula-4-mais-formularios-intro-css/integrar-backend.html
+++ b/aula-4-mais-formularios-intro-css/integrar-backend.html
@@ -23,10 +23,10 @@
         GET = pegar algo/recuperar
         ...pesquisa individual
 
-        Testar requisição: http://symlink.dk/code/php/submit/
+        Testar requisição (Funciona apenas para ver o método) http://symlink.dk/code/php/submit/
      -->
 
-    <form method="POST" action="action.php">
+    <form method="POST" action="http://localhost:3333/envio.php">
         <label for="nome">Nome</label>
         <input type="text" id="nome" name="nome"/><br/>
 
