aula 5: html semantico, flex box e seo

--- a/index.html
+++ b/index.html
@@ -3,16 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Aula 6</title>
 </head>
 <body>
-    
-    <!-- 
-        HTML Semântico
-        Motivações / Pontos positivos
-        Código mais legível
-        Acessibilidade (Leitores de tela)
-        Melhor para motores de busca - SEO - (Google, Yahoo, Bing...)
-    -->
+    <h1>Até Quinta =D</h1>
 </body>
 </html>
