--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aula 7</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>Será terça =D</h1>
+    <h1>Conteúdo das aulas da turma #1453</h1>
 </body>
 </html>
